# tenant-management-applications

./: .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements.txt
tenant-management-app/: README.md  app copy.py  app.py  db_update.py  environment.yml
tenant-management-app/instance/: app.db  output_file.sql
tenant-management-modular/: README.md  run.py  start_dev.py
tenant-management-modular/backend/: app.py  config.py  models.py  openapi.yaml  routes.py  services.py  swagger.py
tenant-management-modular/fastapi_backend/: config.py  database.py  main.py  models.py  schemas.py
tenant-management-modular/frontend/: package.json
tenant-management-modular/frontend/src/: App.css  App.js  index.css
tenant-management-modular/frontend/src/components/: Dashboard.js  Navigation.js  Properties.js  TenantDetailsModal.js  Tenants.js  Transactions.js
tenant-management-modular/instance/: app.db
